<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Play Stopper</string>
    <string name="action_settings">Settings</string>
    <string name="timeDisplay">Enter a time</string>
    <string name="button_left">Reset</string>
    <string name="button_right">Start</string>
    <string name="secondsText">Seconds:</string>
    <string name="minutesText">Minutes:</string>
    <string name="hoursText">Hours:</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonDelete">X</string>
    <string name="banner_ad_unit_id">ca-app-pub-9342941618723647/5724992036</string>
    <string name="nexus_5_test_id">467B40B4730D0C3A11B13A410B8E7EFC</string>
    <string name="moto_g_test_id">DF6094713C3BDC6831BF580ADC637369</string>

</resources>
